@@ -4,4 +4,21 @@ public class MapfinalConsts {
 
 	public static final String version = "0.3.1";
 	public static final String author = "yangyong";
+	
+	/**
+	 * 初始化成功
+	 */
+	public static final String MAP_STATUS_INITIALIZED= "map:status:initialized";
+	/**
+	 * 初始化失败
+	 */
+	public static final String MAP_STATUS_INITIALIZATION_FAILED= "map:status:initialized";
+	/**
+	 * 图层加载成功
+	 */
+	public static final String MAP_STATUS_LAYER_LOADED= "map:status:initialized";
+	/**
+	 * 图层加载失败
+	 */
+	public static final String MAP_STATUS_LAYER_LOADING_FAILED= "map:status:initialized";
 }
