@@ -1,11 +1,15 @@
 -----------------------------
 mapfinal-0.3.2:
 
+
 新增：新增图层事件机制
 新增：新增ImageOverlay图层
 新增：新增Marker图层
 优化：RenderEngine精简
 优化：所有cancelDraw更改为handleEvent，以适应opengl的渲染需要
+优化：优化鼠标坐标的传递，统一jwt和android
+优化：优化layer获取
+优化：优化listener移除
 
 -----------------------------
 mapfinal-0.3.1:
